--- a/chef-repo/cookbooks/zenoss_build/templates/default/zenoss_bashrc.erb
+++ b/chef-repo/cookbooks/zenoss_build/templates/default/zenoss_bashrc.erb
@@ -8,5 +8,5 @@ fi
 # User specific aliases and functions
 export ZENHOME=/opt/zenoss
 export PYTHONPATH=$ZENHOME/lib/python
-export PATH=$PATH:$ZENHOME/bin:<%= java_bin %>
+export PATH=$PATH:$ZENHOME/bin:<%= @java_bin %>
 export INSTANCE_HOME=$ZENHOME
